--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <button class="operator" onclick="addNumber('+');">+</button>
                 <button class="empty" onclick="addNumber();" disabled></button>
                 <button class="number" onclick="addNumber(0);">0</button>
-                <button class="empty" onclick="addNumber();" disabled></button>
+                <button class="empty" onclick="addNumber('.');">.</button>
                 <button class="operator" onclick="addResult();">=</button>
             </div>
         </div>
